<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="emp_str"></string>
    <string name="title">Advantech Fun Test V1.7</string>
    <string name="keypad_title">GRGBanking Android Keypad Test</string>
    <string name="app_name">DonicaTest</string>
    <string name="action_settings">Settings</string>
    <string name="autotestStr">自检程序</string>
    <string name="testlogStr">Demo演示</string>
    <string name="burningStr">烧机测试</string>
    <string name="defMsg">Not Begin</string>
    <string name="defResult"></string>
    <string name="udisk">U Disk Info</string>
    <string name="udisk1">Udisk-1</string>
    <string name="udisk2">Udisk-2</string>
    <string name="udisk3">Udisk-3</string>
    <string name="udisk4">Udisk-4</string>
    <string name="udisk5">Udisk-5</string>
    <string name="udisk6">Udisk-6</string>
    <string name="sata">Sata Disk</string>
    <string name="sata1">Sata Disk-1</string>
    <string name="sata2">Sata Disk-2</string>

    <string name="cpu">Cpu Info</string>
    <string name="power">Power Status</string>
    <string name="audio">Audio Test</string>
    <string name="memory">Memory Info</string>
    <string name="disk">Sd Card Info</string>
    <string name="ssd">SSD Disk Info</string>
    <string name="wifi">Wifi and Bt</string>
    <string name="rfid">Rfid Test</string>
    <string name="ethernet">Ethernet</string>
    <string name="usb">Usb Test</string>
    <string name="sdcard">Sd card Info</string>
    <string name="sdcarddet">Sd card Test</string>
    <string name="lcd">Lcd Test</string>
    <string name="led">Led Test</string>

    <string name="line_out">Line Out</string>
    <string name="mic_in">Mic In</string>
    <string name="line_in">Line In</string>
    <string name="serial_port">Serial Port</string>
    <string name="keypad">Keypad Test</string>
    <string name="rgb">RGB Test</string>
    <string name="quit">Quit</string>
    <string name="autotest">Auto Test</string>
    <string name="title_activity_udisk_fun">UdiskFun</string>
    <string name="title_activity_sata_fun">SataFun</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_audio_fun">AudioFun</string>
    <string name="title_activity_sound_recorder">SoundRecorder</string>
    <string name="title_activity_loopback">LoopbackActivity</string>
    <string name="str_Sent_bytes">Sent bytes</string>
    <string name="str_Received_back">Received bytes</string>
    <string name="str_Lost_bytes">Lost bytes</string>
    <string name="str_Corrupted_bytes">Corrupted bytes</string>
    <string name="title_activity_backlight_view">Backlight Test</string>
    <string name="backlight_title">Backlight Test</string>
    <string name="backlight">Backlight Demo</string>
    <string name="backlight_msg">背光亮度调节是否正常？</string>
    <string name="yes">yes</string>
    <string name="no">no</string>

    <string name="title_activity_volume_view">Volume Test</string>
    <string name="volume_title">Volume Test</string>
    <string name="volume_msg">音量调节是否正常？</string>
    <string name="volume">Volume Demo</string>

    <string name="camera_title">Camera Test</string>
    <string name="camera">Camera Test</string>
    <string name="camera_msg">Does the camera work OK?</string>
    <string name="photo_name">photo name</string>

    <string name="inputcontrol">input enable/disable</string>
    <string name="title_activity_input_view">input enable/disable</string>
    <string name="enable">input enable</string>
    <string name="disable">input disable</string>

    <string name="ledtest">test led</string>

    <string name="title_activity_func_view">Function Test</string>
    <string name="str_Zero">0</string>
    <string name="error_configuration">Please configure your serial port first.</string>
    <string name="error_security">You do not have read/write permission to the serial
		port.</string>
    <string name="error_unknown">The serial port can not be opened for an unknown
			reason.</string>
    <string name="first_button">Sata</string>
    <string name="second_button">Udisk</string>
    <string name="third_button">Ethernet</string>
    <string name="title_activity_log_view">LogView</string>
    <string name="title_activity_rgb__view">RGB_View</string>

</resources>
