<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@drawable/titlebar_whole"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:text="@string/title"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <!--
        <Button
            android:id="@+id/burningBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_blue"
            android:text="@string/burningStr"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@android:color/white"
            android:textSize="14px" />
    -->
    <Button
        android:id="@+id/testlogBtn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_blue"
        android:text="@string/testlogStr"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="@android:color/white"
        android:textSize="14px" />

    <Button
        android:id="@+id/autotestBtn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_marginRight="20dp"
        android:layout_toLeftOf="@+id/testlogBtn"
        android:background="@drawable/button_blue"
        android:text="@string/autotestStr"
        android:textColor="@android:color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textSize="14px" />

    <Button
        android:id="@+id/singletestBtn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_marginRight="20dp"
        android:layout_toLeftOf="@+id/autotestBtn"
        android:background="@drawable/button_blue"
        android:text="单项自检"
        android:textColor="@android:color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textSize="14px" />

</RelativeLayout>
